app/assets/stylesheets/custom.css.scss
/* ... */
.well-footer-blog {
  margin-bottom: 0px;
}

.tags {
  margin-top: 15em;
}

/* Blog formatting */

.format { 
  margin-bottom: .4em;
  line-height: 24px;
}

.format p {
  text-indent: 2em;
}

.format h1 {
  margin-bottom: 5px;
  font: bold 18px/22px Georgia, "Times New Roman", serif;
  color: $grayLarge;
}

.format .indent {
  display: inline-block;
  margin-left: 2em;
}

/* various different icons */

.well-footer li > [class^="icon-comment"] {
  margin-right: 5px;
  margin-left: 3px;
  vertical-align: -3px;
}

[class^="icon-heart"] {
  margin-left: 3px;
  vertical-align: 3px;
}

[class^="icon-thumbs-up"] {
  margin-left: 3px;
  vertical-align: 2px;
}

[class^="icon-globe"] {
  margin-left: 10px;
  vertical-align: -3px;
}

[class^="icon-camera"] { 
  margin-left: 12px;
}

[class^="icon-remove"] { 
  vertical-align: 3px;
}

[class^="icon-map-marker"] { 
  vertical-align: -3px;
}

[class^="icon-pencil"] { 
  margin-right: 5px; 
}

#comment-bar { 
  margin-left: 12px;
  margin-top: 2px;
}

/* alert messages */

#alert-notice {
  padding-right: 0;
  padding-left: 0;
}

#error_explanation {
  color: $red;
  ul {
    list-style: none;
    margin: 0 0 18px 0;
  }
}

#inline {
  margin-left: -10px;
  margin-bottom: 5px;
}

#alert-inline {
  padding-right: 10px;
  padding-left: 10px;
}

.field_with_errors {
  @extend .control-group;
  @extend .error;
}

/* debugging for development */

.debug_dump {
  clear: both;
  width: 100%;
  margin-top: 3em;
  @include paddings;
  @include forms;
}

